Update api response documentation
