# app/Http/Controllers/Auth/AuthController.php
@@ -72,11 +72,36 @@ class AuthController extends Controller
     *   ),
     *
     *   @OA\Response(
-    *       response=201,
-    *       description="Success",
-    *       @OA\JsonContent(
-    *           @OA\Property(property="message", type="string", example="Sorry, wrong email address or password. Please try again")
-    *       )
+    *      response=201,
+    *      description="Usuario creado con exito",
+    *        @OA\JsonContent(
+    *             type="object",
+    *             @OA\Property(
+    *                property="data",
+    *                type="object",
+    *                example={
+    *                  "type": "users",
+    *                  "id": "1",
+    *                  "token": "",
+    *                  "token_type": "",
+    *                  "expires_at": "",
+    *                  "attributtes": {
+    *                      "name": "Alvaro Garcia",
+    *                      "username": "alvarogarcia1010",
+    *                      "email": "alvarogarcia1010@gmail.com",
+    *                      "phone_number": "7777-7777",
+    *                      "birth_date": "1998-09-10"
+    *                    },
+    *                },
+    *             ),
+    *             @OA\Property(
+    *                property="jsonapi",
+    *                type="object",
+    *                example={
+    *                  "version": "1.0",
+    *                },
+    *             ),
+    *        ),
     *   ),
     *
     *   @OA\Response(
@@ -165,11 +190,36 @@ class AuthController extends Controller
     *   ),
     *
     *   @OA\Response(
-    *       response=200,
-    *       description="Success",
-    *       @OA\JsonContent(
-    *           @OA\Property(property="message", type="string", example="Sorry, wrong email address or password. Please try again")
-    *       )
+    *      response=201,
+    *      description="Inicio de sesión exitoso",
+    *        @OA\JsonContent(
+    *             type="object",
+    *             @OA\Property(
+    *                property="data",
+    *                type="object",
+    *                example={
+    *                  "type": "users",
+    *                  "id": "1",
+    *                  "token": "",
+    *                  "token_type": "",
+    *                  "expires_at": "",
+    *                  "attributtes": {
+    *                      "name": "Alvaro Garcia",
+    *                      "username": "alvarogarcia1010",
+    *                      "email": "alvarogarcia1010@gmail.com",
+    *                      "phone_number": "7777-7777",
+    *                      "birth_date": "1998-09-10"
+    *                    },
+    *                },
+    *             ),
+    *             @OA\Property(
+    *                property="jsonapi",
+    *                type="object",
+    *                example={
+    *                  "version": "1.0",
+    *                },
+    *             ),
+    *        ),
     *   ),
     *
     *   @OA\Response(
